--- a/src/component/Input/index.scss
+++ b/src/component/Input/index.scss
@@ -5,4 +5,5 @@
 .tree-input-input-field {
   font-family: $font-family;
   font-size: 14px;
+  background-color: white;
 }
