--- a/src/component/Message/index.scss
+++ b/src/component/Message/index.scss
@@ -6,13 +6,21 @@
   margin: 8px 10px;
   transition: all ease 300ms;
   height: auto;
-  border-left: 1px solid rgb(206, 206, 206);
+  //border-left: 1px solid rgb(206, 206, 206);
   position: relative;
   left: -22px;
   color: $text-color;
+  fill: $text-color;
+  &:before {
+    content: '';
+    width: 1px;
+    height: calc(100% - 2 * 25px);
+    top: 25px;
+    background-color: white;
+    position: absolute;
+  }
   .tree-input-start, .tree-input-end {
     position: relative;
-    background-color: $background-color;
     cursor: pointer;
     height: 25px;
     user-select: none;
@@ -24,11 +32,10 @@
     align-items: center;
     position: relative;
     top: 3px;
-    background-color: $background-color;
     .tree-input-expand {
       width: 18px;
       height: 18px;
-      fill: black;
+      fill: $text-color;
       position: relative;
       left: -3px;
       top: -1px;
@@ -84,6 +91,7 @@
       }
     }
   }
+
   .tree-input-item-input,
   .tree-input-item-enum,
   .tree-input-enum-options,
@@ -99,7 +107,7 @@
     border-radius: 4px;
     color: rgba(0, 0, 0, 0.65);
     transition: all ease 300ms;
-    background: transparent;
+    background: white;
     &::placeholder, .tree-input-place-holder {
       font-family: $font-family;
       font-size: 13px;
