--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,6 +1,6 @@
 
 $background-color: #fbfbfb;
-$text-color: rgb(0, 43, 54);
+$text-color: rgba(0, 43, 54, 0.7);
 $count-color: rgba(0, 0, 0, 0.3);
 $default-color: #3e97e9;
 $danger-color: rgb(245, 64, 74);
